--- a/youtube.html
+++ b/youtube.html
@@ -4,12 +4,18 @@
   </head>
 
   <body>
-    <h1 class="title">O dev coach tem que acabar</h1>
+    <h1 class="title">002 - Objetivos</h1>
     <div>
       <div class="vinyl">
         <div class="label"></div>
       </div>
     </div>
+
+    <div class="soundboard"></div>
+
+    <audio>
+      <source id="audio-source" src="" type="audio/mpeg">
+    </audio>
 
     <script>
       function toggleFullScreen() {
@@ -30,6 +36,8 @@
         false,
       );
     </script>
+
+    <script src="./youtube.js"></script>
   </body>
 </html>
 
