start a draft on learning internals

--- a/youtube.html
+++ b/youtube.html
@@ -4,7 +4,7 @@
   </head>
 
   <body>
-    <h1 class="title">002 - Objetivos</h1>
+    <h1 class="title">003 - Estou cansado, chefe</h1>
     <div>
       <div class="vinyl">
         <div class="label"></div>
